# life-stories-app

./: README.md
backend/: .gitignore  main.py  pyproject.toml
backend/auth/: auth_router.py  register_router.py  util.py
backend/models/common/: api_response.py
backend/models/request/: story_request.py  user.py
backend/models/response/: story_response.py
backend/repositories/: story_repository.py  user_repository.py  util.py
backend/routers/: admin_router.py  story_router.py  user_router.py
backend/services/: auth_service.py  register_service.py  story_service.py  user_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Footer.jsx  Navbar.jsx
frontend/src/pages/: Home.jsx  Login.jsx  Profile.jsx  Register.jsx  StoryEditor.jsx  ViewStory.jsx
